<resources>
    <string name="app_name">OOXX</string>
    <string name="SingleGame">單人遊戲</string>
    <string name="DoubleGame">雙人遊戲</string>
    <string name="NowMode">目前模式：</string>
    <string name="NotEmpty">已經被畫了，請選擇其他空格</string>
    <string name="EndGame">結束</string>
    <string name="Player">玩家</string>
    <string name="Computer">電腦</string>
    <string name="Player1">玩家1</string>
    <string name="Player2">玩家2</string>
    <string name="PlayerWin">玩家贏了</string>
    <string name="Player1Win">玩家1贏了</string>
    <string name="Player2Win">玩家2贏了</string>
    <string name="ComputerWin">電腦贏了</string>
    <string name="Draw">平手</string>
    <string name="GameName">阿姆斯特朗旋風噴射阿姆斯特朗OOXX</string>
    <string name="player1name">Player1\'s name</string>
    <string name="player2name">Player2\'s name</string>
</resources>
