<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/startbackgrounds"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgBG"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835"
        app:srcCompat="@drawable/bg" />

    <ImageButton
        android:id="@+id/imgBtn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/imgBG"
        app:layout_constraintEnd_toEndOf="@+id/imgBG"
        app:layout_constraintStart_toStartOf="@+id/imgBG"
        app:layout_constraintTop_toTopOf="@+id/imgBG"
        app:srcCompat="@drawable/empty" />

    <ImageButton
        android:id="@+id/imgBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/imgBtn4"
        app:layout_constraintEnd_toEndOf="@+id/imgBG"
        app:layout_constraintStart_toStartOf="@+id/imgBG"
        app:layout_constraintTop_toTopOf="@+id/imgBG"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@drawable/empty" />

    <ImageButton
        android:id="@+id/imgBtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/imgBG"
        app:layout_constraintEnd_toStartOf="@+id/imgBtn4"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/imgBG"
        app:layout_constraintTop_toTopOf="@+id/imgBG"
        app:srcCompat="@drawable/empty" />

    <ImageButton
        android:id="@+id/imgBtn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/imgBG"
        app:layout_constraintEnd_toEndOf="@+id/imgBG"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintStart_toEndOf="@+id/imgBtn4"
        app:layout_constraintTop_toTopOf="@+id/imgBG"
        app:srcCompat="@drawable/empty" />

    <ImageButton
        android:id="@+id/imgBtn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/imgBG"
        app:layout_constraintEnd_toEndOf="@+id/imgBG"
        app:layout_constraintStart_toStartOf="@+id/imgBG"
        app:layout_constraintTop_toBottomOf="@+id/imgBtn4"
        app:layout_constraintVertical_bias="0.818"
        app:srcCompat="@drawable/empty" />

    <ImageButton
        android:id="@+id/imgBtn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/imgBtn3"
        app:layout_constraintEnd_toStartOf="@+id/imgBtn1"
        app:layout_constraintStart_toStartOf="@+id/imgBG"
        app:layout_constraintTop_toTopOf="@+id/imgBG"
        app:srcCompat="@drawable/empty" />

    <ImageButton
        android:id="@+id/imgBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/imgBtn5"
        app:layout_constraintEnd_toEndOf="@+id/imgBG"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/imgBtn1"
        app:layout_constraintTop_toTopOf="@+id/imgBG"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@drawable/empty" />

    <ImageButton
        android:id="@+id/imgBtn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/imgBG"
        app:layout_constraintEnd_toStartOf="@+id/imgBtn7"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="@+id/imgBG"
        app:layout_constraintTop_toBottomOf="@+id/imgBtn3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/empty" />

    <ImageButton
        android:id="@+id/imgBtn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/imgBG"
        app:layout_constraintEnd_toEndOf="@+id/imgBG"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/imgBtn7"
        app:layout_constraintTop_toBottomOf="@+id/imgBtn5"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/empty" />

    <TextView
        android:id="@+id/txtSingleOrDouble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/NowMode"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imgBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <ImageView
        android:id="@+id/imgRightOrLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/imgBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/empty" />

    <TextView
        android:id="@+id/txtPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Player1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imgBG"
        app:layout_constraintEnd_toStartOf="@+id/imgRightOrLeft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Player2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imgBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgRightOrLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/imgBG"
        app:layout_constraintEnd_toStartOf="@+id/imgRightOrLeft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPlayer1"
        app:srcCompat="@drawable/empty" />

    <ImageView
        android:id="@+id/imgPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/imgBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toEndOf="@+id/imgRightOrLeft"
        app:layout_constraintTop_toBottomOf="@+id/txtPlayer2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/empty" />

</android.support.constraint.ConstraintLayout>